2004-03-15  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c: Surround the
	drag-outside-to-remove-bookmarks code with "#if 0" blocks; it's
	too unstable right now.

Sun Mar 14 23:36:15 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilechooserdefault.c: Implement local_only by
	filtering the shortcuts and bookmarks list by 
	gtk_file_system_path_to_filename (file_system, path) != NULL.
	(#132894)

	* gtk/gtkfilesystem.c (gtk_file_system_path_is_local): Add
	a convenience function, may by interesting to push to the 
	file system vtable later for performance.

2004-03-14  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilesystem.c (gtk_file_folder_get_info): Allow the path
	to be NULL, so that people can ask for information about a
	parent-less file system root (e.g. get_info (get_folder ("/"), NULL)).

	* gtk/gtkfilesystemunix.c (gtk_file_folder_unix_get_info): Allow
	the condition describe above.

	* gtk/gtkfilechooserdefault.c (get_file_info): Allow getting
	information of root paths.

	* gtk/gtkpathbar.c (_gtk_path_bar_set_path): Handle root paths correctly.

Sun Mar 14 22:32:36 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_set_search_equal_func): Mention
	GtkTreeViewSearchEqualFunc return value oddity here as well.

	* gtk/gtktreeview.c (gtk_tree_view_search_equal_func): On failure
	to get a string to compare to, return TRUE (no match), not 
	FALSE (match). Handle %NULL string values gracefully.
	Remove unused variable. (#135962, Mark McLoughlin)

2004-03-14  Morten Welinder  <terra@gnome.org>

	* gtk/gtkfilesystemunix.c: Kill some debug g_prints.

Sun Mar 14 21:03:15 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkpathbar.[ch]: Add _gtk_path_bar_up()/
	_gtk_path_bar_down().

	* gtk/gtkfilechooserdefault.c: Use _gtk_path_bar_up()/
	_gtk_path_bar_down() as bindings for Alt-Up
	and new Alt-Down. (Partly based on a patch by
	Mark McLoughlin, #136987)
